fix model word break on mobile

--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -27,6 +27,7 @@
   outline: none;
   padding: $l-size;
   text-align: center;
+  word-break: break-all;
 }
 
 .modal__title {
